--- a/CSS_3/RWD/flex.css
+++ b/CSS_3/RWD/flex.css
@@ -4,6 +4,7 @@ h1 {
 }
 .row {
     display: flex;
+    /* display: inline-flex; */
     /* justify-content: flex-start; */
     /* justify-content: center; */
     /* justify-content: space-around; */
@@ -21,7 +22,7 @@ h1 {
     background-color: lightgray;
     border: 2px solid red;
     padding: 10px;
-    /* margin: 0px 20px; */
+    margin: 0px 20px;
     /* width: 25%; */
 }
 
@@ -31,17 +32,22 @@ img {
 
 .col-1 {
     /* width: 20%; */
-    flex-basis: 16%;
-    flex-shrink: 0.2;
+    /* flex-basis: 16%; */
+    /* flex-shrink: 0.2; */
+    /* flex: 1; */
+    /* align-self: start; */
+    align-self: center;
 }
 .col-2 {
     /* width: 50%; */
-    flex-basis: 45%;
-    flex-grow: 0.5;
+    /* flex-basis: 45%; */
+    /* flex-grow: 0.5; */
+    /* flex: 2; */
 }
 .col-3 {
     /* width: 25%; */
-    flex-basis: 20%;
+    /* flex-basis: 20%; */
+    /* flex: 1; */
 }
 
 .gallery {
