--- a/LinkedIn/assets/stylesheets/main.css
+++ b/LinkedIn/assets/stylesheets/main.css
@@ -67,6 +67,10 @@ ul {
     text-align: center;
 }
 
+.black-color {
+    color: #000;
+}
+
 .container {
     max-width: 1140px;
     margin: 0 auto;
@@ -95,14 +99,14 @@ ul {
 /* Header */
 #header {
     background-color: #fff;
+    margin-bottom: 20px;
 }
 #header .col-1 {
     width: 30%;
-    padding: 10px 0px;
 }
 
 #header .col-2 {
-    width: 60%;
+    width: 58%;
 }
 
 #header .logo {
@@ -118,13 +122,32 @@ ul {
     border: none;
     padding: 0px 10px;
 }
+#header .work {
+    width: 30%;
+}
+#header .work ul li {
+    width: 80%;
+    text-align: center;
+}
+#header .work ul li a{
+    font-size: 12px;
+    color: #000;
+}
+#header .work ul li a i {
+    font-size: 20px;
+}
+#header .work ul li a span {
+    display: block;
+}
 
 /* Main-Navigation */
 #main-nav {
-
+    width: 70%;
+    border-right: 1px solid #000;
 }
 #main-nav ul {
     display: flex;
+    align-items: baseline;
 }
 #main-nav ul li {
     width: 18%;
@@ -134,10 +157,23 @@ ul {
     text-align: center;
     color: rgba(0,0,0,0.6);
     font-size: 13px;
-    padding: 5px;
+    padding: 5px 0px;
 }
 #main-nav ul li a i {
-    font-size: 22px;
+    font-size: 20px;
+}
+#main-nav ul li a.active {
+    color: #000;
+    position: relative;
+}
+#main-nav ul li a.active::after {
+    content: "";
+    border: 1px solid #000;
+    background-color: #000;
+    position: absolute;
+    width: 100%;
+    left: 0px;
+    bottom: 0px;
 }
 #main-nav ul li img {
     width: 30%;
@@ -152,6 +188,148 @@ ul {
 
 #header .work ul {
     display: flex;
+}
+
+#sidebar_1 {
+    width: 20%;
+}
+#sidebar_1 .widget {
+    background-color: #fff;
+    margin-bottom: 20px;
+    border: 1px solid rgba(0,0,0,0.08);
+    border-radius: 10px;
+    overflow: hidden;
+}
+#sidebar_1 .widget > div {
+    border-bottom: 1px solid rgba(0,0,0,0.08);
+}
+
+#sidebar_1 .profile .image-top {
+    height: 50px;
+    background-image: url("https://static-exp1.licdn.com/sc/h/55k1z8997gh8dwtihm11aajyq");
+}
+#sidebar_1 .profile {
+    text-align: center;
+    padding-bottom: 15px;
+}
+#sidebar_1 .profile a {
+    display: block;
+    color: #000;
+    margin-bottom: 10px;
+}
+#sidebar_1 .profile .img {
+    margin-bottom: 20px;
+}
+#sidebar_1 .profile p {
+    color: rgba(0,0,0,0.6);
+    font-size: 12px;
+}
+#sidebar_1 .profile .img img {
+    margin-top: -30px;
+    border: 2px solid #fff;
+    border-radius: 50%;
+    width: 30%;
+}
+
+#sidebar_1 .connections {
+    padding: 10px 0px;
+}
+#sidebar_1 .connections a {
+    display: block;
+    /* color: #000; */
+    color: rgba(0,0,0,0.6);
+    padding: 10px;
+    font-size: 12px;
+}
+#sidebar_1 .connections:hover a {
+    background-color: #EBEBEB;
+}
+
+#sidebar_1 .try-premium a,
+#sidebar_1 .my-items a{
+    display: block;
+    padding: 15px;
+    /* color: #000; */
+    font-size: 12px;
+    color: rgba(0,0,0,0.6);
+}
+#sidebar_1 .try-premium a span {
+    display: block;
+}
+#sidebar_1 .try-premium a:hover,
+#sidebar_1 .my-items a:hover {
+    background-color: #EBEBEB;
+}
+
+#sidebar_1 .list ul li {
+    padding: 10px;
+}
+#sidebar_1 .list ul li a {
+    color: #0a66c2;
+    font-size: 13px;
+}
+#sidebar_1 .discover a{
+    display: block;
+    text-align: center;
+    padding: 10px 0px;
+    color: #000;
+}
+#sidebar_1 .discover a:hover {
+    background-color: #EBEBEB;
+}
+
+
+#main {
+    width: 50%;
+}
+
+
+#upload-post {
+    background-color: #fff;
+    padding: 10px 5px 2px;
+    border-radius: 10px;
+}
+#upload-post .img-1 {
+    flex-basis: 8%;
+    text-align: center;
+}
+#upload-post img {
+    border-radius: 50%;
+    width: 100%;
+}
+#upload-post .upload-btn {
+    flex-basis: 90%;
+}
+#upload-post .upload-btn button {
+    width: 100%;
+    cursor: pointer;
+    height: 50px;
+    border-radius: 50px;
+    text-align: left;
+    padding: 10px;
+    background-color: #fff;
+    border: 1px solid rgba(0,0,0,0.40);
+}
+#upload-post .upload-btn button:hover {
+    background-color: #EBEBEB;
+}
+
+#upload-post ul {
+    margin-top: 4px;
+    display: flex;
+    justify-content: space-between;
+}
+#upload-post ul li a {
+    display: block;
+    padding: 15px;
+    color: #000;
+}
+#upload-post ul li a:hover {
+    background-color: #EBEBEB;
+}
+
+#sidebar_2 {
+    width: 25%;
 }
 
 /* Footer */
