--- a/SASS_Examples/sass/base.scss
+++ b/SASS_Examples/sass/base.scss
@@ -1,32 +1,99 @@
 // Pre-defined variables
 @use "sass:math" as math;
+@use 'includes/header';
+@use 'includes/nav.scss';
+@use 'includes/footer';
+@import "variables";
 
-// User defined variables
-$primary-color: #09b4ff;
-$border-color: #0cb4fb7b;
-$para-color: #0000006d;
-$padding: 15px;
-$font: arial;
+@debug 10px;
+@debug 5px * 7px;
+
+@debug "\n";
+@debug "C:/users/";
+
+@debug #fff;
+@debug red;
+@debug rgb(0,0,0);
+@debug rgba(0,0,0,0.5);
+@debug hsl(122,5%, 70%);
+@debug scale-color($primary-color, $lightness: +15%);
+@debug mix($primary-color, $nav-link-color);
+
+
+@each $s in $size {
+    .col-#{$s} {
+        width: $s+px;
+    }
+}
+
+// @for $var from 1 to 11 {
+//     ul li:nth-child(2n + #{$var}) {
+//         background-color: lighten($para-color, $var * 4%);
+//         color: lighten($nav-link-color, 10%);
+//     }
+// }
+
+
+@while $padding >= 15px {
+    ul li:nth-child(2n) {
+        background-color: red;
+    }
+}
 
 .alert {
     // height: math.$pi + px;
-    height: 400px;
-    width: 400px;
-    border: 2px solid $border-color;
+    // height: $defaultHeight + 10;
+    @if ($defaultHeight >= 400px) {
+        height: calc(100vh - 200px);
+    } @else {
+        height: calc(100vmin - 100px);
+    }
+
+    @if ($defaultWidth >= 400px) {
+        width: calc(100vh - 200px);
+    } @else {
+        width: calc(100vmax - 200px);
+    }
+
+    // border: 2px solid $border-color;
     // border-radius: 50%;
     margin: 0 auto;
     padding: $padding;
+    border: {
+        width: 2px;
+        style: solid;
+        color: $border-color;
+        radius: 10px;
+    }
 }
+
+// .alert {
+//     p {
+//         color: $para-color;
+//         font-family: $font;
+//         span {
+//             font-weight: bold;
+//         }
+//     }
+// }
 
 .alert {
     p {
-        color: $para-color;
-        font-family: $font;
-        span {
-            font-weight: bold;
+        font: {
+            family : $font;
+            size: 1.4em;
+            weight: 600;
+            style: italic;
         }
+        // color: scale-color($primary-color, $lightness: +5%);
+        color: mix($primary-color, $nav-link-color);
     }
-    // span {
-    //     font-weight: bold;
-    // }
 }
+
+.show {
+    @extend .alert;
+    margin-top: 20px;
+}
+
+
+
